# swu_fool

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
