[package]
name = "swu_fool_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
csv = "1.1"
dotenv = "0.15"
chrono = "0.4"